--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "modules": "^0.4.0",
     "postcss-px2rem": "^0.3.0",
     "style-resources-loader": "^1.2.1",
-    "vant": "^1.6.17",
+    "vant": "^2.0.0-beta.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6",
     "vuex": "^3.1.0",
