--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "lib-flexible": "^0.3.2",
     "modules": "^0.4.0",
     "postcss-px2rem": "^0.3.0",
+    "qrcanvas": "^3.0.4",
     "style-resources-loader": "^1.2.1",
-    "vant": "^2.0.0-beta.1",
+    "vant": "^2.0.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6",
     "vuex": "^3.1.0",
