--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "modules": "^0.4.0",
     "postcss-px2rem": "^0.3.0",
     "qrcanvas": "^3.0.4",
+    "qrcodejs2": "0.0.2",
     "style-resources-loader": "^1.2.1",
     "vant": "^2.0.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6",
+    "vue-seamless-scroll": "^1.1.16",
     "vuex": "^3.1.0",
     "wisdom": "^10.1.4",
     "wisdom-h5": "0.0.41"
