--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue-router": "^3.0.6",
     "vue-seamless-scroll": "^1.1.16",
     "vuex": "^3.1.0",
+    "weixin-js-sdk": "^1.4.0-test",
     "wisdom": "^10.1.4",
     "wisdom-h5": "0.0.41"
   },
